--- a/angular.json
+++ b/angular.json
@@ -7,8 +7,29 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
-        }
+          "prefix": "app",
+          "styleext": "scss",
+          "spec": false
+      },
+      "@schematics/angular:directive": {
+          "prefix": "app",
+          "spec": false
+      },
+      "@schematics/angular:class": {
+          "spec": false
+      },
+      "@schematics/angular:guard": {
+          "spec": false
+      },
+      "@schematics/angular:module": {
+          "spec": false
+      },
+      "@schematics/angular:pipe": {
+          "spec": false
+      },
+      "@schematics/angular:service": {
+          "spec": false
+      }
       },
       "root": "",
       "sourceRoot": "src",
